src/test/ui/impl-unused-tps.stderr
error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:13:8
   |
LL | impl<T,U> Foo<T> for [isize;1] {
   |        ^ unconstrained type parameter

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:30:8
   |
LL | impl<T,U> Bar for T {
   |        ^ unconstrained type parameter

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:38:8
   |
LL | impl<T,U> Bar for T
   |        ^ unconstrained type parameter

error[E0207]: the type parameter `U` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:46:8
   |
LL | impl<T,U,V> Foo<T> for T
   |        ^ unconstrained type parameter

error[E0207]: the type parameter `V` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-unused-tps.rs:46:10
   |
LL | impl<T,U,V> Foo<T> for T
   |          ^ unconstrained type parameter

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0207`.
